travis file fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t udagram-api-users .
-  - docker tag udagram-api-users vdjs/udagram-api-users:latest
+  - docker tag udagram-api-users $DOCKER_USERNAME/udagram-api-users:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push vdjs/udagram-api-users
+  - docker push $DOCKER_USERNAME/udagram-api-users
