--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@ npm-debug.log*
 .tmp/
 .versions/
 coverage/
-www/
 node_modules/
 tmp/
 temp/
@@ -36,6 +35,7 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 node_modules
 venv/
+deploymentEnv.yml
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
